--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
 <p> calculating using 1 m<sup>2</sup>=10.764 ft<sup>2</sup></p>
 <p> calculating using 1 m=3.28 ft</p>
 <form action="/" method="POST" accept-charset="utf-8">
-  <input type="text" name="frame_length" placeholder="Frame Length in ft"> 
+  <input type="text" name="frame_length" placeholder="Frame Length"> 
   <select required name='frame_length_units'>
     <option disabled selected value>-- Select Units --</option>
     <option value="m">Meter</option>
@@ -26,7 +26,7 @@
     <option value="ft">Feet</option>
   </select>
   <br>
-  <input type="text" name="frame_width" placeholder="Frame Width in ft">
+  <input type="text" name="frame_width" placeholder="Frame Width">
   <select required name='frame_width_units'>
     <option disabled selected value>-- Select Units --</option>
     <option value="m">Meter</option>
@@ -35,7 +35,7 @@
     <option value="ft">Feet</option>
   </select>
   <br>
-  <input type="text" name="wood_width" placeholder="Wood Width in ft">
+  <input type="text" name="wood_width" placeholder="Wood Width">
   <select required name='wood_width_units'>
     <option disabled selected value>-- Select Units --</option>
     <option value="m">Meter</option>
@@ -44,7 +44,7 @@
     <option value="ft">Feet</option>
   </select>
   <br>
-  <input type="text" name="margin_width" placeholder="Margin in inches">
+  <input type="text" name="margin_width" placeholder="Margin">
   <select required name='margin_width_units'>
     <option disabled selected value>-- Select Units --</option>
     <option value="m">Meter</option>
